--- a/lombok.config
+++ b/lombok.config
@@ -226,6 +226,7 @@ lombok.addLombokGeneratedAnnotation = true
 # clear lombok.copyableAnnotations
 # lombok.copyableAnnotations += <fully.qualified.Type>
 # lombok.copyableAnnotations -= <fully.qualified.Type>
+lombok.copyableAnnotations += org.springframework.beans.factory.annotation.Qualifier
 #
 
 ##
