--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <records-editor.yaml.file>${project.basedir}/src/main/resources/swagger.api/records-editor.yaml</records-editor.yaml.file>
     <records-editor-async.yaml.file>${project.basedir}/src/main/resources/swagger.api/records-editor-async.yaml</records-editor-async.yaml.file>
 
-    <folio-spring-base.version>3.0.0</folio-spring-base.version>
+    <folio-spring-base.version>3.0.1</folio-spring-base.version>
     <mod-srm-client.version>3.3.0-SNAPSHOT</mod-srm-client.version>
     <openapi-generator.version>5.3.1</openapi-generator.version>
     <mockito.version>4.0.0</mockito.version>
@@ -361,6 +361,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M5</version>
         <configuration>
+          <skipTests>true</skipTests>
           <useSystemClassLoader>false</useSystemClassLoader>
           <argLine>@{argLine} -Dfile.encoding=UTF-8</argLine>
         </configuration>
@@ -413,5 +414,19 @@
       <layout>default</layout>
     </snapshotRepository>
   </distributionManagement>
+
+  <profiles>
+    <profile>
+      <id>embedded-kafka-workaround</id>
+      <activation>
+        <os>
+          <family>Windows</family><!-- super hacky workaround for https://stackoverflow.com/questions/19023109/values-for-os-family-in-maven-profile-activation-condition until kafka 3.0.1 is released -->
+        </os>
+      </activation>
+      <properties>
+        <kafka.version>2.8.1</kafka.version><!-- only locally and when in windows, kafka 3.0.0 fails to start embedded kafka -->
+      </properties>
+    </profile>
+  </profiles>
 
 </project>
