MODQM-58 Adjust the quickMarcJson payload to provide field protection status

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
   <dependencies>
     <dependency>
       <groupId>org.folio</groupId>
+      <artifactId>mod-data-import-converter-storage-client</artifactId>
+      <version>1.13.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.folio</groupId>
       <artifactId>folio-spring-base</artifactId>
       <version>${folio-spring-base.version}</version>
     </dependency>
