--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -27,7 +27,9 @@ spring:
     enabled: true
   jackson:
     default-property-inclusion: NON_EMPTY
+
 folio:
+  environment: ${ENV:folio}
   qm:
     cache:
       update:
@@ -56,6 +58,22 @@ folio:
         marc-holdings:
           id: fa0262c7-5816-48d0-b9b3-7b7a862a5bc7
           name: QuickMarc Create MARC Holdings and Inventory Holdings
+  kafka:
+    numberOfPartitions: ${NUMBER_OF_PARTITIONS:5}
+    replicationFactor: ${REPLICATION_FACTOR:1}
+    listener:
+      di-completed:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_COMPLETED}
+        group-id: ${folio.environment}-mod-quick-marc-di-group
+      di-error:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_ERROR}
+        group-id: ${folio.environment}-mod-quick-marc-di-group
+      qm-completed:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.QM_COMPLETED}
+        group-id: ${folio.environment}-mod-quick-marc-qm-group
 management:
   endpoints:
     web:
