--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -17,6 +17,7 @@ logging:
   level:
     io.zonky.test.db.postgres: FATAL
 folio:
+  environment: ${ENV:folio}
   logging:
     request:
       enabled: false
@@ -32,3 +33,19 @@ folio:
         marc-holdings:
           id: fa0262c7-5816-48d0-b9b3-7b7a862a5bc7
           name: QuickMarc Create MARC Holdings and Inventory Holdings
+  kafka:
+    numberOfPartitions: ${NUMBER_OF_PARTITIONS:1}
+    replicationFactor: ${REPLICATION_FACTOR:1}
+    listener:
+      di-completed:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_COMPLETED}
+        group-id: ${folio.environment}-mod-quick-marc-di-group
+      di-error:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_ERROR}
+        group-id: ${folio.environment}-mod-quick-marc-di-group
+      qm-completed:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.QM_COMPLETED}
+        group-id: ${folio.environment}-mod-quick-marc-qm-group
