--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -29,16 +29,32 @@ spring:
   jackson:
     default-property-inclusion: NON_EMPTY
 folio:
+  environment: ${ENV:folio}
   tenant:
     validation:
       enabled: true
   logging:
     request:
-      enabled: true
-      level: full
+      enabled: false
     feign:
       enabled: true
       level: full
+  kafka:
+    numberOfPartitions: ${NUMBER_OF_PARTITIONS:5}
+    replicationFactor: ${REPLICATION_FACTOR:1}
+    listener:
+      di-completed:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_COMPLETED}
+        group-id: ${folio.environment}-mod-quick-marc-di-group
+      di-error:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_ERROR}
+        group-id: ${folio.environment}-mod-quick-marc-di-group
+      qm-completed:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.QM_COMPLETED}
+        group-id: ${folio.environment}-mod-quick-marc-qm-group
 management:
   endpoints:
     web:
