--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,13 +21,15 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
         format_sql: true
-    show-sql: true
+    show-sql: false
   liquibase:
     changeLog: classpath:db/changelog/changelog-master.xml
     enabled: true
   jackson:
     default-property-inclusion: NON_EMPTY
+
 folio:
+  environment: ${ENV:folio}
   qm:
     cache:
       update:
@@ -39,13 +41,26 @@ folio:
       enabled: true
   logging:
     request:
-      enabled: true
-      # Possible values: none, basic, headers, full. Default: basic
-      level: full
+      enabled: false
     feign:
       enabled: true
-      # Possible values: none, basic, headers, full. Default: basic
       level: basic
+  kafka:
+    numberOfPartitions: ${NUMBER_OF_PARTITIONS:5}
+    replicationFactor: ${REPLICATION_FACTOR:1}
+    listener:
+      di-completed:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_COMPLETED}
+        group-id: ${folio.environment}-mod-quick-marc-di-group
+      di-error:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_ERROR}
+        group-id: ${folio.environment}-mod-quick-marc-di-group
+      qm-completed:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.QM_COMPLETED}
+        group-id: ${folio.environment}-mod-quick-marc-qm-group
 management:
   endpoints:
     web:
