--- a/pom.xml
+++ b/pom.xml
@@ -432,7 +432,7 @@
     <url>https://github.com/folio-org/${project.artifactId}</url>
     <connection>scm:git:git://github.com/folio-org/${project.artifactId}.git</connection>
     <developerConnection>scm:git:git@github.com:folio-org/${project.artifactId}.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>release/v2.3</tag>
   </scm>
 
   <repositories>
