--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,6 @@
     <mod-srm-client.version>3.3.0</mod-srm-client.version>
     <mod-data-import-converter-storage-client.version>1.13.0</mod-data-import-converter-storage-client.version>
     <openapi-generator.version>5.3.1</openapi-generator.version>
-    <mockito.version>4.3.1</mockito.version>
     <mapstruct.version>1.4.2.Final</mapstruct.version>
     <commons-lang.version>2.6</commons-lang.version>
     <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
@@ -40,18 +39,12 @@
     <!-- Test properties-->
     <wiremock.version>2.32.0</wiremock.version>
     <marc4j.version>2.9.2</marc4j.version>
-    <jsonpath.version>2.7.0</jsonpath.version>
-    <embedded-postgresql.version>2.1.1</embedded-postgresql.version>
     <junit-extensions.version>2.5.0</junit-extensions.version>
     <jsonassert.version>1.5.0</jsonassert.version>
+    <testcontainer.version>1.16.3</testcontainer.version>
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>org.folio</groupId>
-      <artifactId>mod-data-import-converter-storage-client</artifactId>
-      <version>${mod-data-import-converter-storage-client.version}</version>
-    </dependency>
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>folio-spring-base</artifactId>
@@ -88,6 +81,21 @@
       <groupId>org.folio</groupId>
       <artifactId>mod-source-record-manager-client</artifactId>
       <version>${mod-srm-client.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.folio</groupId>
+          <artifactId>domain-models-runtime</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.folio</groupId>
+          <artifactId>domain-models-api-interfaces</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>mod-data-import-converter-storage-client</artifactId>
+      <version>${mod-data-import-converter-storage-client.version}</version>
       <exclusions>
         <exclusion>
           <groupId>org.folio</groupId>
@@ -151,13 +159,11 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-inline</artifactId>
-      <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.jayway.jsonpath</groupId>
       <artifactId>json-path-assert</artifactId>
-      <version>${jsonpath.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -167,19 +173,32 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>io.zonky.test</groupId>
-      <artifactId>embedded-database-spring-test</artifactId>
-      <version>${embedded-postgresql.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.kafka</groupId>
-      <artifactId>spring-kafka-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.awaitility</groupId>
       <artifactId>awaitility</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers</artifactId>
+      <version>${testcontainer.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${testcontainer.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>kafka</artifactId>
+      <version>${testcontainer.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>${testcontainer.version}</version>
       <scope>test</scope>
     </dependency>
 
