--- a/pom.xml
+++ b/pom.xml
@@ -440,7 +440,16 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.0.0-M5</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
         <configuration>
+          <includes>*ApiTest.java</includes>
           <groups>integration</groups>
         </configuration>
       </plugin>
