--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -30,8 +30,6 @@ spring:
   cache:
     cache-names:
       - job-profiles
-      - qm-update-results
-      - data-import-results
     caffeine:
       spec: maximumSize=500,expireAfterAccess=3600s
 folio:
@@ -59,31 +57,16 @@ folio:
     numberOfPartitions: ${NUMBER_OF_PARTITIONS:5}
     replicationFactor: ${REPLICATION_FACTOR:1}
     listener:
-      di-completed:
-        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
-        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_COMPLETED}
-        group-id: ${folio.environment}-mod-quick-marc-di-completed-group
-      di-error:
-        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
-        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_ERROR}
-        group-id: ${folio.environment}-mod-quick-marc-di-error-group
-      qm-completed:
-        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
-        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.QM_COMPLETED}
-        group-id: ${folio.environment}-mod-quick-marc-qm-group
+      di:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:1}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.(DI_COMPLETED|DI_ERROR)}
+        group-id: ${folio.environment}-mod-quick-marc-di-group
 management:
   endpoints:
     web:
       exposure:
         include: info,health,env,httptrace
       base-path: /admin
-#  endpoint:
-#    health:
-#      show-details: always
-#      show-components: always
-###################################################
-# Disable all checks except for readiness
-###################################################
   health:
     defaults:
       enabled: false
