MODQM-223 Fix properties

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -30,7 +30,8 @@ folio:
   environment: ${ENV:folio}
   logging:
     request:
-      enabled: false
+      enabled: true
+      level: basic
     feign:
       enabled: false
       level: full
