--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -42,7 +42,8 @@ folio:
       enabled: true
   logging:
     request:
-      enabled: false
+      enabled: true
+      level: basic
     feign:
       enabled: true
       level: full
@@ -58,10 +59,6 @@ folio:
         concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
         topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_ERROR}
         group-id: ${folio.environment}-mod-quick-marc-di-error-group
-      qm-completed:
-        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
-        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.QM_COMPLETED}
-        group-id: ${folio.environment}-mod-quick-marc-qm-group
 management:
   endpoints:
     web:
