--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -49,18 +49,23 @@ folio:
       enabled: true
   logging:
     request:
-      enabled: false
+      enabled: true
+      level: basic
     feign:
       enabled: true
       level: basic
   kafka:
-    numberOfPartitions: ${NUMBER_OF_PARTITIONS:5}
+    numberOfPartitions: ${NUMBER_OF_PARTITIONS:1}
     replicationFactor: ${REPLICATION_FACTOR:1}
     listener:
-      di:
-        concurrency: ${KAFKA_EVENTS_CONCURRENCY:1}
-        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.(DI_COMPLETED|DI_ERROR)}
-        group-id: ${folio.environment}-mod-quick-marc-di-group
+      di-completed:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:5}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_COMPLETED}
+        group-id: ${folio.environment}-mod-quick-marc-di-completed-group
+      di-error:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:5}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_ERROR}
+        group-id: ${folio.environment}-mod-quick-marc-di-error-group
 management:
   endpoints:
     web:
