--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -75,8 +75,11 @@ management:
   endpoints:
     web:
       exposure:
-        include: info,health,env,httptrace
+        include: info,health,env,httptrace,loggers
       base-path: /admin
+  endpoint:
+    loggers:
+      enabled: true
 #  endpoint:
 #    health:
 #      show-details: always
