--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.4</version>
+    <version>3.0.1</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
 
@@ -22,9 +22,9 @@
     <records-editor.yaml.file>${project.basedir}/src/main/resources/swagger.api/records-editor.yaml</records-editor.yaml.file>
     <records-editor-async.yaml.file>${project.basedir}/src/main/resources/swagger.api/records-editor-async.yaml</records-editor-async.yaml.file>
 
-    <folio-spring-base.version>5.0.1</folio-spring-base.version>
-    <openapi-generator.version>6.2.0</openapi-generator.version>
-    <mapstruct.version>1.5.2.Final</mapstruct.version>
+    <folio-spring-base.version>6.0.0-SNAPSHOT</folio-spring-base.version>
+    <openapi-generator.version>6.2.1</openapi-generator.version>
+    <mapstruct.version>1.5.3.Final</mapstruct.version>
     <commons-lang.version>2.6</commons-lang.version>
     <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
 
@@ -35,19 +35,19 @@
     </sonar.exclusions>
 
     <!-- Test properties-->
-    <wiremock.version>2.34.0</wiremock.version>
+    <wiremock.version>2.35.0</wiremock.version>
     <marc4j.version>2.9.2</marc4j.version>
     <junit-extensions.version>2.6.0</junit-extensions.version>
     <jsonassert.version>1.5.1</jsonassert.version>
-    <testcontainer.version>1.17.4</testcontainer.version>
+    <testcontainer.version>1.17.6</testcontainer.version>
 
     <!-- Plugin properties -->
     <build-helper-maven-plugin.version>3.3.0</build-helper-maven-plugin.version>
     <copy-rename-maven-plugin.version>1.0.1</copy-rename-maven-plugin.version>
-    <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
-    <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
-    <maven-release-plugin.version>3.0.0-M5</maven-release-plugin.version>
-    <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
+    <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
+    <maven-failsafe-plugin.version>3.0.0-M7</maven-failsafe-plugin.version>
+    <maven-release-plugin.version>3.0.0-M7</maven-release-plugin.version>
+    <maven-checkstyle-plugin.version>3.2.0</maven-checkstyle-plugin.version>
   </properties>
 
   <dependencies>
@@ -348,6 +348,8 @@
                 <java8>true</java8>
                 <dateLibrary>java8</dateLibrary>
                 <interfaceOnly>true</interfaceOnly>
+                <useSpringBoot3>true</useSpringBoot3>
+                <!--requestMappingMode>api_interface</requestMappingMode-->
               </configOptions>
             </configuration>
           </execution>
@@ -378,6 +380,8 @@
                 <useTags>true</useTags>
                 <dateLibrary>java8</dateLibrary>
                 <interfaceOnly>true</interfaceOnly>
+                <useSpringBoot3>true</useSpringBoot3>
+                <!--requestMappingMode>api_interface</requestMappingMode-->
                 <responseWrapper>DeferredResult</responseWrapper>
               </configOptions>
             </configuration>
