--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -15,12 +15,12 @@ spring:
       enable-auto-commit: true
       auto-commit-interval: 1000
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQL10Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: none
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQL10Dialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
   liquibase:
@@ -35,6 +35,10 @@ spring:
       - data-import-results
     caffeine:
       spec: maximumSize=500,expireAfterAccess=3600s
+  cloud:
+    openfeign:
+      okhttp:
+        enabled: true
 folio:
   environment: ${ENV:folio}
   tenant:
