--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,12 +14,12 @@ spring:
       auto-commit-interval: 1000
   jpa:
     open-in-view: false
-    database-platform: org.hibernate.dialect.PostgreSQL10Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: none
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQL10Dialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: false
   liquibase:
@@ -34,6 +34,10 @@ spring:
       - data-import-results
     caffeine:
       spec: maximumSize=500,expireAfterAccess=3600s
+  cloud:
+    openfeign:
+      okhttp:
+        enabled: true
 folio:
   environment: ${ENV:folio}
   qm:
