--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,6 @@ spring:
     name: mod-quick-marc
   datasource:
     # to boot up application despite of any DB connection issues
-    continue-on-error: true
     password: ${DB_PASSWORD:pass}
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_DATABASE:db}
     username: ${DB_USERNAME:user}
@@ -37,6 +36,9 @@ spring:
     openfeign:
       okhttp:
         enabled: true
+  sql:
+    init:
+      continue-on-error: true
 folio:
   environment: ${ENV:folio}
   qm:
