--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -2,8 +2,6 @@ spring:
   application:
     name: mod-quick-marc
   datasource:
-    # to boot up application despite of any DB connection issues
-    continue-on-error: true
     password: ${DB_PASSWORD:pass}
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_DATABASE:db}
     username: ${DB_USERNAME:user}
@@ -38,6 +36,10 @@ spring:
     openfeign:
       okhttp:
         enabled: true
+  sql:
+    init:
+      # to boot up application despite of any DB connection issues
+      continue-on-error: true
 folio:
   environment: ${ENV:folio}
   tenant:
