--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -30,6 +30,7 @@ spring:
       - job-profiles
       - qm-update-results
       - data-import-results
+      - qm-fetch-linking-rules-results
     caffeine:
       spec: maximumSize=500,expireAfterAccess=3600s
   cloud:
