--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -17,6 +17,7 @@ spring:
       - job-profiles
       - qm-update-results
       - data-import-results
+      - qm-fetch-linking-rules-results
     caffeine:
       spec: maximumSize=500,expireAfterAccess=3600s
   kafka:
