--- a/src/main/resources/swagger.api/schemas/common.yaml
+++ b/src/main/resources/swagger.api/schemas/common.yaml
@@ -137,6 +137,12 @@ quickMarcEdit:
         relatedRecordVersion:
           description: Information related to version of the record
           type: string
+      required:
+        - parsedRecordId
+        - parsedRecordDtoId
+        - externalId
+        - externalHrid
+        - relatedRecordVersion
 
 quickMarcCreate:
   allOf:
