refactor: Make fields required for PUT request (#208)
- "relatedRecordVersion", "externalHrid", "externalId", "parsedRecordDtoId", "parsedRecordId" fields are required in PUT request body

Refs: MODQM-325

--- a/src/main/resources/swagger.api/schemas/common.yaml
+++ b/src/main/resources/swagger.api/schemas/common.yaml
@@ -164,6 +164,12 @@ quickMarcEdit:
         relatedRecordVersion:
           description: Information related to version of the record
           type: string
+      required:
+        - parsedRecordId
+        - parsedRecordDtoId
+        - externalId
+        - externalHrid
+        - relatedRecordVersion
 
 quickMarcCreate:
   allOf:
